--- a/AVFundationLearn/Info.plist
+++ b/AVFundationLearn/Info.plist
@@ -41,5 +41,17 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>--需要您的同意,才能访问相机</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>--需要上传图片设置个人信息</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>--需要根据您的位置搜索附近的服务</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>--需要根据您的位置搜索附近的服务</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>--需要根据您的位置搜索附近的服务</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>--需要访问您的麦克风</string>
 </dict>
 </plist>
